--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-#Docker containers for ckan + plugin dcat + dcat-ap-it
+#Docker containers for ckan + plugin dcat + dcat-ap-it#
 
 ##Requirements for run ckan container:
 - docker 
