--- a/README
+++ b/README
@@ -50,18 +50,44 @@
 		NOTE: NOTE: Run this command just first time you exec ckan docker
 
 3) Access ckan server with browser at this link:
-
-	http://localhost:5000
 	
-	http://localhost:5000/harvest
+	#CKAN
 	
+		http://localhost:5000
 
-You can use as ckan "sysadmin" account following credential: 
 
-	User: ckanadmin
-	Password: ckanpassword
+	# CKAN-HARVEST
+	
+		http://localhost:5000/harvest
+	
+	If you need to use harvesting function:
+	
+	a) Open a first bash on container: execute following commands (*leave bash opened):
+		
+		docker exec -it ckandcat /bin/bash
+		
+		. /usr/lib/ckan/default/bin/activate 
+		
+		paster --plugin=ckanext-harvest harvester gather_consumer --config /etc/ckan/default/ckan.ini
 
-	* Change at first login
+
+
+	b) Open a second bash on container: execute following commands (*leave bash opened):
+
+		docker exec -it ckandcat /bin/bash
+		
+		. /usr/lib/ckan/default/bin/activate 
+		
+		paster --plugin=ckanext-harvest harvester fetch_consumer --config /etc/ckan/default/ckan.ini
+
+
+	CKAN Account:
+	You can use as ckan "sysadmin" account following credential: 
+
+		User: ckanadmin
+		Password: ckanpassword
+
+		* Change at first login
 
 
 ### Detailed informations about ckan docker images
